add hist-gen
